<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".teams.TeamsDetail">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:paddingBottom="10dp"
                app:layout_collapseMode="parallax"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_detail_teams"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/kotlin" />

                <TextView
                    android:id="@+id/tv_detail_teams"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teams"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_detail_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_detail_stadium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:textSize="12sp" />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_teams"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed"
            android:gravity="center"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_teams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>